--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
 	"homepage": "https://github.com/ArtemAM/blogApp#readme",
 	"description": "",
 	"dependencies": {
+		"dotenv": "^16.4.7",
 		"express": "^4.21.2"
 	},
 	"devDependencies": {
